Add update of row Armes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <td></td><td>Escalade</td><td tabindex="21"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Force</td><td tabindex="22"></td>
+                            <td></td><td>Force</td><td tabindex="22" id="force"></td>
                         </tr>
                         <tr class="ability">
                             <td></td><td>Jet</td><td tabindex="23"></td>
