Fix some height to ensure same rendering

--- a/index.html
+++ b/index.html
@@ -514,15 +514,8 @@
                     </tr>
                     <tr class="Score">
                         <td id="damage">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <br/>
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
                         </td>
                     </tr>
                     </tbody>
@@ -538,9 +531,8 @@
                     </tr>
                     <tr class="Score">
                         <td id="wounds">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <br/>
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
                         </td>
                     </tr>
                     </tbody>
@@ -556,9 +548,8 @@
                     </tr>
                     <tr class="Score">
                         <td id="injuries">
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
-                            <br/>
-                            <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox">
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
+                            <div class="checkers-row"><input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"></div>
                         </td>
                     </tr>
                     </tbody>
