Update weapons on skill changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/index.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <div class="sheet">
@@ -171,7 +172,7 @@
                             <td></td><td>Arme d'Hast</td><td tabindex="31"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Bouclier</td><td tabindex="32"></td>
+                            <td></td><td>Boucliers</td><td tabindex="32"></td>
                         </tr>
                         <tr class="ability">
                             <td></td><td>Casse tête</td><td tabindex="33"></td>
@@ -407,10 +408,10 @@
                             <td>Tir</td><td></td><td></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Arbalète</td><td tabindex="87"></td>
+                            <td></td><td>Arbalètes</td><td tabindex="87"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Arc</td><td tabindex="88"></td>
+                            <td></td><td>Arcs</td><td tabindex="88"></td>
                         </tr>
                         <tr class="ability">
                             <td></td><td>Jet</td><td tabindex="89"></td>
@@ -474,7 +475,7 @@
                         <td>Santé</td>
                     </tr>
                     <tr class="stat">
-                        <td>Agilité + Athlétisme + Vigilance <br/> - Bonus Défensif - Malus d'Armure</td>
+                        <td>Agilité + Athlétisme + Vigilance<br/>+ Bonus Défensif - Malus d'Armure</td>
                         <td>Endurance x3</td>
                     </tr>
                     <tr class="Score">
@@ -875,8 +876,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
 
-        <script src="js/index-to-refactor.js"></script>
-
         <!-- Shared -->
         <script src="js/shared/model/abstract-model.js"></script>
         <script src="js/shared/data.js"></script>
@@ -892,5 +891,7 @@
         <script src="js/armor/shared/armor.model.js"></script>
         <script src="data/armors.js"></script>
         <script src="js/armor/armor.js"></script>
+
+        <script src="js/index-to-refactor.js"></script>
     </body>
 </html>
