--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 <input type="text" class="skill-val" id="dress" tabindex="42" />
                 <input type="text" class="skill-val" id="dup" tabindex="47" />
                 <input type="text" class="skill-val" id="end" tabindex="52" />
-                <input type="text" class="skill-val" id="ing" tabindex="55" />
 
-                <input type="text" class="skill-val" id="lang" tabindex="59" />
-                <input type="text" class="skill-val" id="larc" tabindex="60" />
-                <input type="text" class="skill-val" id="pers" tabindex="64" />
-                <input type="text" class="skill-val" id="heal" tabindex="72" />
-                <input type="text" class="skill-val" id="status" tabindex="76" />
-                <input type="text" class="skill-val" id="sur" tabindex="81" />
-                <input type="text" class="skill-val" id="tir" tabindex="86" />
-                <input type="text" class="skill-val" id="vig" tabindex="91" />
-                <input type="text" class="skill-val" id="will" tabindex="94" />
+                <input type="text" class="skill-val skill2-val" id="ing" tabindex="55" />
+                <input type="text" class="skill-val skill2-val" id="lang" tabindex="59" />
+                <input type="text" class="skill-val skill2-val" id="larc" tabindex="60" />
+                <input type="text" class="skill-val skill2-val" id="pers" tabindex="64" />
+                <input type="text" class="skill-val skill2-val" id="heal" tabindex="72" />
+                <input type="text" class="skill-val skill2-val" id="status" tabindex="76" />
+                <input type="text" class="skill-val skill2-val" id="sur" tabindex="81" />
+                <input type="text" class="skill-val skill2-val" id="tir" tabindex="86" />
+                <input type="text" class="skill-val skill2-val" id="vig" tabindex="91" />
+                <input type="text" class="skill-val skill2-val" id="will" tabindex="94" />
 
                 <div class="name">
                     <div class="name-content" contenteditable="true">
