Fix different names between group and ability

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <input type="text" class="skill-val" id="militar" tabindex="15"/>
                 <input type="text" class="skill-val" id="athl" tabindex="19" />
                 <input type="text" class="skill-val" id="know" tabindex="26" />
-                <input type="text" class="skill-val" id="coc" tabindex="30" />
+                <input type="text" class="skill-val" id="cac" tabindex="30" />
                 <input type="text" class="skill-val" id="disc" tabindex="40" />
                 <input type="text" class="skill-val" id="dress" tabindex="42" />
                 <input type="text" class="skill-val" id="dup" tabindex="47" />
@@ -96,10 +96,10 @@
                             <td></td><td>Contorsion</td><td tabindex="11"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Equilibre</td><td tabindex="12"></td>
+                            <td></td><td>Équilibre</td><td tabindex="12"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Esquiv</td><td tabindex="13"></td>
+                            <td></td><td>Esquive</td><td tabindex="13"></td>
                         </tr>
                         <tr>
                             <td></td><td>Vivacité</td><td tabindex="14"></td>
@@ -169,28 +169,28 @@
                             <td>Corps à corps</td><td></td><td></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Arme d'Hast</td><td tabindex="31"></td>
+                            <td></td><td>Armes d'Hast</td><td tabindex="31"></td>
                         </tr>
                         <tr class="ability">
                             <td></td><td>Boucliers</td><td tabindex="32"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Casse tête</td><td tabindex="33"></td>
+                            <td></td><td>Casse-tête</td><td tabindex="33"></td>
                         </tr>
                         <tr class="ability">
                             <td></td><td>Escrime</td><td tabindex="34"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Hache</td><td tabindex="35"></td>
+                            <td></td><td>Haches</td><td tabindex="35"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Lames courtes</td><td tabindex="36"></td>
+                            <td></td><td>Lames Courtes</td><td tabindex="36"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Lames longues</td><td tabindex="37"></td>
+                            <td></td><td>Lames Longues</td><td tabindex="37"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Lance</td><td tabindex="38"></td>
+                            <td></td><td>Lances</td><td tabindex="38"></td>
                         </tr>
                         <tr>
                             <td></td><td>Rixe</td><td tabindex="39"></td>
@@ -222,7 +222,7 @@
                             <td></td><td>Conduite</td><td tabindex="44"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Equitation</td><td tabindex="45"></td>
+                            <td></td><td>Équitation</td><td tabindex="45"></td>
                         </tr>
                         <tr>
                             <td></td><td>Exercice</td><td tabindex="46"></td>
@@ -414,7 +414,7 @@
                             <td></td><td>Arcs</td><td tabindex="88"></td>
                         </tr>
                         <tr class="ability">
-                            <td></td><td>Jet</td><td tabindex="89"></td>
+                            <td></td><td>Armes de Jet</td><td tabindex="89"></td>
                         </tr>
                         <tr>
                             <td></td><td>Siège</td><td tabindex="90"></td>
@@ -564,7 +564,7 @@
                         <!-- Titres -->
                         <tr class="t-header">
                             <td>Arme</td>
-                            <td>Spécialité</td>
+                            <td>Dés</td>
                             <td>Qualité</td>
                             <td>Dégâts</td>
                             <td>Attributs</td>
