--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <table class="picture">
                     <tbody>
                     <tr>
-                        <td>&nbsp;</td>
+                        <td>
+                            <input id="input-choose-picture" type="file"><img id="input-show-picture"/>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -891,6 +893,9 @@
         <script src="js/armor/shared/armor.model.js"></script>
         <script src="data/armors.js"></script>
         <script src="js/armor/armor.js"></script>
+
+        <!-- Image -->
+        <script src="js/image/image.js"></script>
 
         <script src="js/index-to-refactor.js"></script>
     </body>
