--- a/index.html
+++ b/index.html
@@ -745,6 +745,11 @@
         <script src="data/avantages.js"></script>
         <script src="js/avantage/avantage.js"></script>
 
+        <!-- Defauts -->
+        <script src="js/defaut/shared/defaut.model.js"></script>
+        <script src="data/defauts.js"></script>
+        <script src="js/defaut/defaut.js"></script>
+
         <!-- Image -->
         <script src="js/image/image.js"></script>
 
