fix(picture): Set picture as background to fit parent container properly

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <tbody>
                     <tr>
                         <td>
-                            <img id="input-show-picture" /><input id="input-choose-picture" type="file">
+                            <input id="input-choose-picture" type="file">
                         </td>
                     </tr>
                     </tbody>
