feat(shield): Use shield def bonus to calculate defense when selected

--- a/index.html
+++ b/index.html
@@ -740,6 +740,9 @@
         <script src="data/qualities.js"></script>
         <script src="js/weapon/weapon.js"></script>
 
+        <!-- Combat -->
+        <script src="js/combat/def.js"></script>
+
         <!-- Armor -->
         <script src="js/armor/shared/armor.model.js"></script>
         <script src="data/armors.js"></script>
